--- a/html/main.html
+++ b/html/main.html
@@ -25,7 +25,7 @@
 
 		<div class="hero">
 			<div class="hero_text">
-				<p>My image news</p>
+				<p><strong>News_18 turns global; embraces new tagline as News_18 Media Corporation. <br>News_18 bring to you latest exclusive news all over the world.</strong></p>
 			</div>	
 		</div>
 	
@@ -60,28 +60,32 @@
 
 
 		<div class="mostwatchedtitle"> 
-			<h3>MOST WATCHED--------------------------------------------------------------------------------------------------------------------------------------</h3>
+			<h3><em>MOST WATCHED--------------------------------------------------------------------------------------------------------------------------------------</em></h3>
 		</div>
 
 		<div class="mostwatched">
-			<div class="mostwatchedpic"><img src="../image/obamaimg.jpg">
+			<div class="mostwatchedpic"><a href="video.html"><img src="../image/obamaimg.jpg"></a>
 			</div>
 	
 			<div class="mostwatchedtext">
-				<h4>Obama says "no more terror in world"</h4>
-				<p>the US president make stratergies to eradicate terror attacks</p>
+				<h3>Obama Wades Into Hugely Consequential French Election.</h3>
+				<p>US Ex president Berak Obama confronted Putin directly about intervening in our political system and put in place sanctions, though he clearly didn't do enough. "I feel like we sort of choked," one former colleague of Obama has said, according to an article in the Washington Post.<br><br>
+				Despite turmoil swirling in Washington, Donald Trump’s presidency still enjoys strong support among his base, particularly in white, rural America. These are the “forgotten men and women” to whom Trump has promised much, the people who feel that recent administrations were too focused<br></p>
 			</div>
 		</div>
 
 
 		<div class="limelightstitle"> 
-			<h3>LIMELIGHTS--------------------------------------------------------------------------------------------------------------------------------------</h3>
+			<h3><em>LIMELIGHTS--------------------------------------------------------------------------------------------------------------------------------------</em></h3>
 		</div>
 
 		<div class="limelights">
 				<div class="limelightstext">
-				<h4>Terror rebel in Iraq</h4>
-				<p>ISIS again make terror attacks in iraq, says BBC News</p>
+				<h3>The Mohammed Dahlan-Hamas power-sharing deal: A chance for peace in Gaza
+				</h3>
+				<p>In 2015, a United Nations report warned that as a consequence of the devastation produced by the Israeli-Egyptian blockade and several successive Israeli military operations, Gaza could become uninhabitable by 2020.
+				AUGUST 4, 2017. ISIS again make terror attacks in iraq, says BBC News<br>
+				There is mounting evidence that climate change is creating the conditions for instability and poverty, two significant contributors to the outbreak of civil war and violence.</p>
 			</div>
 
 			<div class="limelightspic"><img src="../image/terrorimg.jpg">
@@ -90,12 +94,14 @@
 
 
 		<div id="footer">
-		<h1>Contact us on:</h1>
-		<center>
-			<a href="https://en-gb.facebook.com/login/" target="_blank"><img src="../image/fb.png" width="2.5%"></a>&nbsp&nbsp&nbsp&nbsp&nbsp
-			<a href="https://twitter.com/login" target="_blank"><img src="../image/twitter.png" width="2.5%"></a>&nbsp&nbsp&nbsp&nbsp&nbsp
-			<a href="https://www.youtube.com/" target="_blank"><img src="../image/youtube-logo.png" width="2.5%"></a>
-		</center>	
+			<p> &nbsp&nbsp&nbsp
+			News_18 - The Best Free News portal for society  ||  Copyright©2017 news_18. All Rights Reserved with news_18.</p>
+			<center>
+				<p>keep in touch with :</p>
+				<a href="https://en-gb.facebook.com/login/" target="_blank"><img src="../image/fb.png" width="2.5%"></a>&nbsp&nbsp&nbsp&nbsp&nbsp
+					<a href="https://twitter.com/login" target="_blank"><img src="../image/twitter.png" width="2.5%"></a>&nbsp&nbsp&nbsp&nbsp&nbsp
+					<a href="https://www.youtube.com/" target="_blank"><img src="../image/youtube.png" width="2.5%"></a>
+			</center>	
 		</div>	
 </div>
 </body>
