--- a/html/main.html
+++ b/html/main.html
@@ -3,14 +3,16 @@
 <head>
 	<title>news_18</title>
 	<link rel="stylesheet" href="../css/main.css">
+	<!--google text API -->
 	<link href="https://fonts.googleapis.com/css?family=Exo|Shrikhand" rel="stylesheet">
 </head>
 <body>
-
+<!--To set width of the website -->
 	<div class="widthset" >
-
+<!--Header -->
 	<h1>NEWS_18</h1>
 
+<!--Navigation bar-->
 		<div class="navigationbar">
 			<ul>
 				<li><a href="#">HOME</a></li>
@@ -22,14 +24,16 @@
 			</ul>
 		</div>
 
-
+	<!--Hero image -->
 		<div class="hero">
 			<div class="hero_text">
 				<p><strong>News_18 turns global; embraces new tagline as News_18 Media Corporation. <br>News_18 bring to you latest exclusive news all over the world.</strong></p>
 			</div>	
 		</div>
 	
+	<!--Three column section -->
 		<div class="container">
+		<!--first column -->
 			<div id="section_one">
 				<h3>New US sanctions are 'breach' of nuclear deal, Iran says</h3>
 
@@ -41,7 +45,8 @@
 
 				Iran has prepared a list of 16 measures to take against the U.S. action, Araghchi said. He did not elaborate, but said the measures included steps to “improve” Iran’s armed forces.<br></p>
 			</div>
-
+		
+		<!--second column -->
 		<div id="section_two">
 			<h3>MORNING BRIEF: Dems suddenly scramble to devise ObamaCare fix</h3>
 				<p>Democrats are pushing a slew of proposals aimed at improving the nation's ailing health care system after Senate Republicans last week endured a high-profile failure of their ‘skinny repeal’ amendment bill.  But as Democratic ideas threaten to increase the federal deficit, Dems may find little support from the GOP.<br>
@@ -49,6 +54,8 @@
 				The assurance comes despite tweets and comments critical of Sessions from President Donald Trump after the attorney general recused himself from the Russia collusion investigation.<br></p>
 		</div>
 
+
+		<!--third column -->
 		<div id="section_three">
 			<h3>President Trump joined two Republican senators on Wednesday to champion legislation overhauling legal immigration in America</h3>
 			<p>President Trump joined two Republican senators on Wednesday to champion legislation overhauling legal immigration in America, calling for a merit-based system that would significantly cut admissions over the next decade. <br>
@@ -59,14 +66,16 @@
 		</div>
 
 
+		<!-- Most watched heading-->
 		<div class="mostwatchedtitle"> 
 			<h3><em>MOST WATCHED--------------------------------------------------------------------------------------------------------------------------------------</em></h3>
 		</div>
-
+		<!--Most watched two column section -->
 		<div class="mostwatched">
+		<!--first column -->
 			<div class="mostwatchedpic"><a href="video.html"><img src="../image/obamaimg.jpg"></a>
 			</div>
-	
+			<!--second column -->
 			<div class="mostwatchedtext">
 				<h3>Obama Wades Into Hugely Consequential French Election.</h3>
 				<p>US Ex president Berak Obama confronted Putin directly about intervening in our political system and put in place sanctions, though he clearly didn't do enough. "I feel like we sort of choked," one former colleague of Obama has said, according to an article in the Washington Post.<br><br>
@@ -74,12 +83,13 @@
 			</div>
 		</div>
 
-
+		<!--Limelights heading -->
 		<div class="limelightstitle"> 
 			<h3><em>LIMELIGHTS--------------------------------------------------------------------------------------------------------------------------------------</em></h3>
 		</div>
 
 		<div class="limelights">
+		<!--text column -->
 				<div class="limelightstext">
 				<h3>The Mohammed Dahlan-Hamas power-sharing deal: A chance for peace in Gaza
 				</h3>
@@ -87,12 +97,12 @@
 				AUGUST 4, 2017. ISIS again make terror attacks in iraq, says BBC News<br>
 				There is mounting evidence that climate change is creating the conditions for instability and poverty, two significant contributors to the outbreak of civil war and violence.</p>
 			</div>
-
+		<!--picture column-->
 			<div class="limelightspic"><img src="../image/terrorimg.jpg">
 			</div>
 		</div>
 
-
+		<!--footer-->
 		<div id="footer">
 			<p> &nbsp&nbsp&nbsp
 			News_18 - The Best Free News portal for society  ||  Copyright©2017 news_18. All Rights Reserved with news_18.</p>
