--- a/html/video.html
+++ b/html/video.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>news_18</title>
+	<title>news_18_html</title>
 	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-
+		
+		<!-- nav bar -->
 		<div class="navigationbar">
 			<ul>
 				<li><a href="main.html">HOME</a></li>
@@ -16,12 +17,14 @@
 				<li><a href="#">LIFE</a></li>	
 			</ul>
 		</div>
-
-<center><video id="newsvideo"  src="../video/BBC.mp4" controls autoplay></video></center>
+		<!-- video  -->
+		
+		<center><video id="newsvideo"  src="../video/BBC.mp4" controls autoplay></video></center>
 
 		<div class="videocontent">
 			<div class="videoheading"><center><h1>China warns India, says its restraint over Doklam standoff has a ‘bottom line’</h1></center></div>
 
+			<!-- txt under video -->
 			<div class="videotext">China has said that it has shown “utmost goodwill” over the prolonged military standoff with India in the Sikkim sector but warned that its “restraint” has a “bottom line”.<br><br>
 
 The reaction from the Chinese defence ministry late Thursday night came a day after India’s external affairs ministry in a statement said the peace and tranquillity of the India-China boundary constitutes the important prerequisite for the smooth development of bilateral relations.<br><br>
@@ -35,6 +38,8 @@ Ren Guoqiang, a spokesperson of the Chinese defence ministry, in a statement cal
 
 </div>
 		</div>
+
+<!-- footer -->
 
 <div id="footer">
 			<p> &nbsp&nbsp&nbsp&nbsp
